# kee-contract

./: .gitignore  Cargo.toml  README.md  calc.sol  gen.sh  hardhat.config.ts  package.json  test.js  tsconfig.json
contracts/: FriendContract.sol  FriendtechSharesV1.sol  KeeBeeSharesV1.sol  MinerContract.sol  PledgeMinerContract.sol  TickerContract.sol
contracts/examples/: ExampleOracleSimple.sol
contracts/libraries/: Math.sol  RandomNumber.sol  SunswapV2Library.sol  UQ112x112.sol  UniswapOracleLibrary.sol
contracts/sunswap/: ReaToken.sol  SunswapV2ERC20.sol  SunswapV2Factory.sol  SunswapV2Pair.sol  SunswapV2Router02.sol
contracts/sunswap/interfaces/: ISunswapV2Callee.sol  ISunswapV2ERC20.sol  ISunswapV2Factory.sol  ISunswapV2Pair.sol  ISunswapV2Router01.sol  ISunswapV2Router02.sol
contracts/test/: SmartERC20.sol
deploy/: 001_deploy_token.ts
doc/: work.md
res/: TickerContract.abi
resources/test/: DeployTest.spec.ts  FriendContractTest.spec.ts  KeeBeeSharesV1spec.ts  MinerContractTest.spec.ts  SimpleOracleTest.spec.ts  TickerContractTest.spec.ts
scripts/: deploy-lottery-test.ts  deploy-oracle copy.ts  deploy-oracle.ts  tron-test.ts
src/: deploy_token.rs  lib.rs  main.rs
src/test/: BananaSwapV2PairFeeto.spec.ts  MinerContractTest.spec.ts  SimpleOracleTest.spec.ts  TickerContractTest.spec.ts
src/test/shared/: utilities.ts
