[package]
name = "rea-lottery-web3"
version = "0.1.0"
edition = "2021"

[dependencies]
web3 = { version = "0.18.0", default-features = false, features = ["http-rustls-tls"] }

tokio = { version = "1.25.0", features = ["full"] }
env_logger = "0.9"
# tokio-stream = { version = "0.1", optional = true }
# tokio-util = { version = "0.7", optional = true, features = ["compat", "io"] }

[features]
default = ["std"]
alloc = []
std = ["alloc"]